# timberborn-vibed-power-mix

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
scripts/: refresh_test_image.py
src/: cli.py  consts.py  machines.json  machines.py  main.py  models.py  optimizer.py  rng.py  simulation.py
src/plots/: battery_plot.py  canvas.py  empty_hours_plot.py  energy_plot.py  power_plot.py  surplus_plot.py
tests/: conftest.py  helpers.py  test_visual.py
timberborn_power_mix/: cli.py  consts.py  machines.py  main.py  models.py  optimizer.py  rng.py  simulation.py
timberborn_power_mix/plots/: battery_plot.py  canvas.py  energy_plot.py  power_plot.py  surplus_plot.py
timberborn_power_mix/simulation/: core.py  helpers.py  models.py
