[project]
name = "timberborn-vibed-power-mix"
version = "0.1.0"
description = ""
authors = [
    {name = "CiottiGiorgio"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pydantic>=2.0.0",
    "click>=8.1.7"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
