[project]
name = "timberborn-vibed-power-mix"
version = "0.1.0"
description = ""
authors = [
    {name = "CiottiGiorgio"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pydantic>=2.0.0",
    "click>=8.1.7",
]

[tool.poetry]
packages = [{include = "timberborn_power_mix"}]

[project.scripts]
tb-power-mix = "timberborn_power_mix.main:main"

[tool.poetry.group.dev.dependencies]
black = "^26"
ruff = "^0.15"
pytest = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
